syntax = "proto3";

package pb;

enum MsgType{
     req = 0;
     res = 1;
}

message Msg {
    int32 version = 1;
    int64 id  = 2;
    MsgType msgType = 3;
    bool batch = 4;
    int32 codecType = 5;
    bytes data = 6;
}

message Batch {
    repeated bytes data = 1;
}

message Request {
    uint64 id = 1;
    string method = 2;
    bytes data = 3;
    bool noResponse = 4;
}

message Response {
    uint64 id = 1;
    bytes data = 2;
    string errMsg = 3;
}
